<resources>
    <string name="app_name" translatable="false">Smart AutoClicker</string>
    <string name="activity_scenario_title">Scenarios</string>
    <string name="menu_search_item_title">Search</string>
    <string name="no_scenarios">No scenario.\nClick on the \'+\' button to create one.</string>
    <plurals name="scenario_sub_text">
        <item quantity="one">%d event</item>
        <item quantity="other">%d events</item>
    </plurals>
    <string name="dialog_permissions_title">Permissions required</string>
    <string name="dialog_permissions_header">The following permissions are required to use Smart AutoClicker:</string>
    <string name="dialog_permission_overlay">Overlay</string>
    <string name="dialog_permission_overlay_desc">The overlay permission allows this application to display a menu
                                                  over other apps.</string>
    <string name="dialog_permission_accessibility">Accessibility service</string>
    <string name="dialog_permission_accessibility_desc">The accessibility service allows this application to click on
                                                        other apps for you.</string>
    <string name="dialog_permission_notification">Notification</string>
    <string name="dialog_permission_notification_desc">Optional: Shows the notification while the application is running.</string>
    <string name="notification_channel_name" translatable="false">Smart AutoClicker</string>
    <string name="notification_title">Scenario: %1$s</string>
    <string name="notification_message">Press to change the scenario</string>
    <string name="dialog_add_scenario_title">New scenario</string>
    <string name="dialog_add_scenario_name_hint">Name</string>
    <string name="dialog_delete_scenario_title">Delete scenario</string>
    <string name="dialog_delete_scenario_message">This will delete %1$s. Are you sure ?</string>
    <string name="dialog_rename_scenario_title">Rename scenario</string>
    <string name="dialog_event_list_title">Event list</string>
    <string name="dialog_event_list_add">New</string>
    <string name="dialog_event_list_reorder">Reorder</string>
    <string name="dialog_event_list_no_events">No events.\nClick on \'New\' to create one. </string>
    <string name="dialog_event_list_delete_title">Delete Event</string>
    <string name="dialog_event_list_delete_message">This will delete %1$s. Are you sure ?</string>
    <string name="dialog_event_add_title">Add new event</string>
    <string name="dialog_event_add_create">Create</string>
    <string name="dialog_event_add_copy">Copy from an existing event</string>
    <string name="dialog_event_copy_header_event">Events from this scenario</string>
    <string name="dialog_event_copy_header_all">Events from all scenarios</string>
    <string name="dialog_event_copy_search">Search by event name</string>
    <string name="dialog_event_copy_empty">No events found.</string>
    <string name="dialog_event_config_title">Event configuration</string>
    <string name="dialog_event_config_name_title">Name</string>
    <string name="dialog_event_config_condition_title">Conditions</string>
    <string name="dialog_event_config_actions_title">Actions</string>
    <string name="dialog_event_config_stop_after_executions">Executions before scenario end</string>
    <string name="dialog_event_config_executions_hint">Don\'t stop the scenario</string>
    <string name="dialog_condition_operator_title">Conditions type</string>
    <string name="condition_operator_and">All conditions</string>
    <string name="condition_operator_or">Only one condition</string>
    <string name="condition_operator_and_desc">All conditions are fulfilled</string>
    <string name="condition_operator_or_desc">At least one is fulfilled</string>
    <string name="dialog_action_type_title">Action type</string>
    <string name="dialog_action_type_click">Click</string>
    <string name="dialog_action_type_swipe">Swipe</string>
    <string name="dialog_action_type_pause">Wait</string>
    <string name="dialog_action_type_intent">Intent</string>
    <string name="dialog_condition_type_capture">Capture</string>
    <string name="dialog_condition_type_process">Process</string>
    <string name="dialog_condition_type_timer">Timer</string>
    <string name="dialog_action_config_click_press_duration_title">Press duration</string>
    <string name="dialog_action_config_click_position_title">Click position</string>
    <string name="dialog_action_config_click_position_on_condition">On condition</string>
    <string name="dialog_action_config_click_position_select_position">On position…</string>
    <string name="dialog_action_config_click_position_random">Randomly click in an area</string>
    <string name="dialog_action_config_click_position_none">No click position defined</string>
    <string name="dialog_action_config_click_position">Click on %1$d, %2$d</string>
    <string name="dialog_action_config_click_random">Randomly click on a certain point in [%1$d, %2$d, %3$d, %4$d]</string>
    <string name="dialog_action_config_swipe_duration_title">Swipe duration</string>
    <string name="dialog_action_config_swipe_position_title">Swipe position</string>
    <string name="dialog_action_config_swipe_position_none">No swipe position defined</string>
    <string name="dialog_action_config_swipe_position">Swipe from %1$d, %2$d to %3$d, %4$d</string>
    <string name="dialog_action_config_pause_duration_title">Pause duration</string>
    <string name="dialog_action_config_intent_config_type_title">Configuration type</string>
    <string name="dialog_action_config_intent_config_type_simple">Simple</string>
    <string name="dialog_action_config_intent_config_type_advanced">Advanced</string>
    <string name="dialog_action_config_intent_simple_start_app_title">Start application</string>
    <string name="dialog_action_config_intent_simple_start_app_no_app">No application selected</string>
    <string name="dialog_action_config_intent_advanced_send_type_title">Intent sending type</string>
    <string name="dialog_action_config_intent_advanced_send_type_start_app" translatable="false">Start activity</string>
    <string name="dialog_action_config_intent_advanced_send_type_broadcast" translatable="false">Send broadcast</string>
    <string name="dialog_action_config_intent_advanced_action_title" translatable="false">Action</string>
    <string name="dialog_action_config_intent_advanced_flags_title" translatable="false">Flags</string>
    <string name="dialog_action_config_intent_advanced_comp_name_title" translatable="false">Component name</string>
    <string name="dialog_action_config_intent_advanced_extras_title" translatable="false">Extras</string>
    <string name="dialog_action_config_intent_advanced_extras_config_title" translatable="false">Extra</string>
    <string name="dialog_action_config_intent_advanced_extras_config_boolean_true" translatable="false">True</string>
    <string name="dialog_action_config_intent_advanced_extras_config_boolean_false" translatable="false">False</string>
    <string name="dialog_action_config_intent_advanced_extras_config_key">Key</string>
    <string name="dialog_action_config_intent_advanced_extras_config_value">Value</string>
    <string name="dialog_action_config_intent_advanced_extras_config_value_type">Value type</string>
    <string name="dialog_action_config_intent_advanced_extras_config_value_type_none">Choisir un type</string>
    <string name="dialog_application_select_title">Select an application</string>
    <string name="dialog_application_select_empty">No application detected</string>
    <string name="dialog_action_new_title">New Action</string>
    <string name="dialog_action_new_create">Create</string>
    <string name="dialog_action_new_copy">Copy from another action</string>
    <string name="dialog_action_copy_empty">No actions found.</string>
    <string name="dialog_action_copy_click_details">During %1$s at [%2$d, %3$d]</string>
    <string name="dialog_action_copy_click_random">During %1$s, Randomly click on a certain point in [%2$d, %3$d, %4$d, %5$d]</string>
    <string name="dialog_action_copy_swipe_details">During %1$s from [%2$d, %3$d] to [%4$d, %5$d]</string>
    <string name="dialog_action_copy_pause_details">During %1$s</string>
    <string name="dialog_action_copy_intent_details_action">Send %1$s</string>
    <string name="dialog_action_copy_intent_details_action_component">Send %1$s to %2$s</string>
    <string name="dialog_action_copy_header_scenario">Event from this scenario</string>
    <string name="dialog_action_copy_sub_header_event">Actions from this event</string>
    <string name="dialog_action_copy_header_all">Actions from all events</string>
    <string name="dialog_action_copy_search">Search by action name</string>
    <string name="dialog_condition_title">Condition</string>
    <string name="dialog_condition_name_title">Name</string>
    <string name="dialog_condition_detection_details_title">Detection details</string>
    <string name="dialog_condition_delete">Delete</string>
    <string name="dialog_condition_at">at position [%1$d,%2$d] [%3$d,%4$d]</string>
    <string name="dialog_condition_in">in the area [%1$d,%2$d] [%3$d,%4$d]</string>
    <string name="dialog_condition_type_title">Detection type</string>
    <string name="dialog_condition_type_whole_screen">Anywhere on screen</string>
    <string name="dialog_condition_type_exact_position">At the same position</string>
    <string name="dialog_condition_type_detect_area">Within the detection area</string>
    <string name="dialog_condition_threshold_title">Tolerated difference</string>
    <string name="dialog_condition_threshold_value">Tolerance: %1$d %%</string>
    <string name="dialog_condition_period_tint">Trigger interval (ms)</string>
    <string name="dialog_condition_should_be_detected">Visible</string>
    <string name="dialog_condition_should_not_be_detected">Triggered when the judgment condition is true</string>
    <string name="dialog_condition_error">The condition image can\'t be found.</string>
    <string name="dialog_condition_new_title">New Condition</string>
    <string name="dialog_condition_new_create">Create</string>
    <string name="dialog_condition_new_copy">Copy from another condition</string>
    <string name="dialog_condition_copy_empty">Can\'t copy, you don\'t have any conditions.</string>
    <string name="dialog_condition_copy_threshold">%1$d%%</string>
    <string name="toast_configure_single_click">Touch the position to click on.</string>
    <string name="toast_configure_swipe_from">Touch the position to start the swipe from.</string>
    <string name="toast_configure_swipe_to">Touch the position to end the swipe to.</string>
    <string name="toast_denied_screen_sharing_permission">User denied screen sharing permission</string>
    <string name="accessibility_service_description">This application needs this service to inject the clicks you have
        created into the other applications once the conditions have been detected.\n\nNo data will be collected from
        this application. Feel free to visit our github, the code is open source !</string>
    <string name="content_desc_add_scenario">Create a new scenario</string>
    <string name="content_desc_image_condition">The image to be detected</string>
    <string name="dialog_backup_create_select_file">Select output file</string>
    <string name="dialog_backup_create_progress">Creating backup: %1$d/%2$d</string>
    <string name="dialog_backup_import_compatibility">Some of the imported scenarios have been generated from a device with a different screen and this might cause issues with the detection and action coordinates.\n\nTo fix it, you need to take new screenshots for your conditions and update your click/swipe positions.</string>
    <string name="dialog_backup_adjust_coordinate">Automatically adjust coordinates based on screen resolution</string>
</resources>