<?xml version="1.0" encoding="utf-8"?>

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/text_file_selection"
            style="@style/ItemView.Big"
            android:gravity="center_vertical"
            android:textSize="@dimen/text_size_list_item_text"
            app:drawableEndCompat="@drawable/ic_chevron"
            tools:text="@string/dialog_backup_create_select_file" />

        <androidx.appcompat.widget.AppCompatCheckBox
            android:id="@+id/cb_adjust_coordinate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_horizontal_default"
            android:paddingStart="@dimen/margin_horizontal_mini"
            android:paddingEnd="@dimen/margin_horizontal_mini"
            android:text="@string/dialog_backup_adjust_coordinate" />

        <FrameLayout
            android:id="@+id/layout_status"
            android:layout_width="match_parent"
            android:layout_height="@dimen/item_height_big"
            android:layout_marginTop="@dimen/margin_vertical_large"
            android:layout_marginBottom="@dimen/margin_vertical_large"
            android:visibility="gone">

            <ImageView
                android:id="@+id/icon_status"
                android:layout_width="@dimen/item_height_big"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:visibility="gone" />

            <ProgressBar
                android:id="@+id/loading"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:visibility="gone" />

        </FrameLayout>

        <TextView
            android:id="@+id/text_status"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin_horizontal_default"
            android:gravity="center"
            android:text="@string/dialog_backup_create_progress"
            android:textSize="@dimen/text_size_list_item_text"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/layout_compat_warning"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone">

            <View style="@style/Separator" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/margin_horizontal_default"
                android:gravity="center"
                android:text="@string/dialog_backup_import_compatibility"
                android:textSize="@dimen/text_size_list_item_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/text_status" />

        </LinearLayout>

        <View style="@style/Separator" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
