<?xml version="1.0" encoding="utf-8"?><!--
 * Copyright (C) 2022 Nain57
 *
 * This program is free software; you can redistribute it and/or
 * modify it under the terms of the GNU General Public License
 * as published by the Free Software Foundation; either version 2
 * of the License, or (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program; If not, see <http://www.gnu.org/licenses/>.
-->
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        tools:layout_gravity="center">

        <androidx.cardview.widget.CardView
            style="@style/HeaderCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/HeaderTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/edit_name"
                    android:text="@string/dialog_condition_name_title" />

                <include layout="@layout/include_view_separator" />

                <EditText
                    android:id="@id/edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/item_height"
                    android:layout_marginStart="@dimen/margin_horizontal_small"
                    android:layout_marginEnd="@dimen/margin_horizontal_small"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:maxLength="@integer/name_max_length"
                    tools:text="@string/default_condition_name" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/HeaderCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/HeaderTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/edit_name"
                    android:text="@string/dialog_condition_detection_details_title" />

                <ImageView
                    android:id="@+id/image_condition"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/margin_vertical_small"
                    android:layout_marginBottom="@dimen/margin_vertical_small"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/content_desc_image_condition"
                    android:maxWidth="@dimen/dialog_condition_max_width"
                    android:maxHeight="@dimen/dialog_condition_max_height"
                    android:scaleType="fitCenter"
                    tools:layout_width="150dp"
                    tools:src="@drawable/ic_click" />

                <include layout="@layout/include_view_separator" />

                <TextView
                    android:id="@+id/condition_detection_should_appear"
                    style="@style/ItemView.Small"
                    android:drawablePadding="@dimen/margin_horizontal_small"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/text_size_list_item_text"
                    tools:drawableEnd="@drawable/ic_chevron"
                    tools:drawableStart="@drawable/ic_confirm"
                    tools:text="@string/dialog_condition_should_be_detected" />

                <include layout="@layout/include_view_separator" />

                <TextView
                    android:id="@+id/condition_detection_type"
                    style="@style/ItemView.Small"
                    android:drawablePadding="@dimen/margin_horizontal_small"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/text_size_list_item_text"
                    tools:drawableEnd="@drawable/ic_chevron"
                    tools:text="@string/dialog_condition_type_whole_screen" />

                <TextView
                    android:id="@+id/condition_detection_type_value"
                    style="@style/ItemView.Small"
                    android:drawablePadding="@dimen/margin_horizontal_small"
                    android:gravity="center_vertical"
                    android:textSize="@dimen/text_size_list_item_text"
                    android:visibility="gone"
                    tools:drawableEnd="@drawable/ic_chevron"
                    tools:text="@string/dialog_condition_type_whole_screen" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/HeaderCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/HeaderTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_condition_threshold_title" />

                <TextView
                    android:id="@+id/text_diff_threshold"
                    style="@style/ItemView.Small"
                    android:layout_marginStart="@dimen/margin_horizontal_small"
                    android:layout_marginEnd="@dimen/margin_horizontal_small"
                    android:gravity="center_vertical"
                    android:text="@string/dialog_condition_threshold_value"
                    android:textSize="@dimen/text_size_list_item_text"
                    tools:text="Value: 12%" />

                <include layout="@layout/include_view_separator" />

                <SeekBar
                    android:id="@+id/seekbar_diff_threshold"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/item_height"
                    android:layout_marginStart="@dimen/margin_horizontal_small"
                    android:layout_marginEnd="@dimen/margin_horizontal_small"
                    android:importantForAutofill="no"
                    android:inputType="number" />


            </LinearLayout>

        </androidx.cardview.widget.CardView>

    </LinearLayout>

</androidx.core.widget.NestedScrollView>