<?xml version="1.0" encoding="utf-8"?><!--
 * Copyright (C) 2021 Nain57
 *
 * This program is free software; you can redistribute it and/or
 * modify it under the terms of the GNU General Public License
 * as published by the Free Software Foundation; either version 2
 * of the License, or (at your option) any later version.
 *
 * This program is distributed in the hope that it will be useful,
 * but WITHOUT ANY WARRANTY; without even the implied warranty of
 * MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 * GNU General Public License for more details.
 *
 * You should have received a copy of the GNU General Public License
 * along with this program; If not, see <http://www.gnu.org/licenses/>.
-->
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <androidx.cardview.widget.CardView
            style="@style/HeaderCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/HeaderTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/edit_name"
                    android:text="@string/dialog_event_config_name_title" />

                <include layout="@layout/include_view_separator" />

                <EditText
                    android:id="@id/edit_name"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/item_height"
                    android:layout_marginStart="@dimen/margin_horizontal_small"
                    android:layout_marginEnd="@dimen/margin_horizontal_small"
                    android:imeOptions="actionDone"
                    android:importantForAutofill="no"
                    android:inputType="text"
                    android:maxLength="@integer/name_max_length"
                    tools:text="@string/default_event_name" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/HeaderCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/HeaderTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_event_config_condition_title" />

                <include layout="@layout/include_view_separator" />

                <LinearLayout
                    android:id="@+id/layout_condition_operator"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        android:id="@+id/text_condition_operator_desc"
                        style="@style/ItemView.Small"
                        android:drawablePadding="@dimen/margin_horizontal_small"
                        android:gravity="center_vertical"
                        android:text="@string/condition_operator_or_desc"
                        android:textSize="@dimen/text_size_list_item_text"
                        app:drawableEndCompat="@drawable/ic_chevron"
                        tools:drawableStart="@drawable/ic_all_conditions" />

                </LinearLayout>

                <include layout="@layout/include_view_separator" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/list_conditions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/margin_horizontal_small"
                    android:layout_marginTop="@dimen/margin_vertical_default"
                    android:layout_marginEnd="@dimen/margin_horizontal_small"
                    android:layout_marginBottom="@dimen/margin_vertical_default"
                    android:background="@color/listBackground"
                    android:orientation="horizontal"
                    android:scrollbars="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="1"
                    tools:listitem="@layout/item_condition_card" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            style="@style/HeaderCardView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    style="@style/HeaderTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dialog_event_config_actions_title" />

                <include layout="@layout/include_view_separator" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/list_actions"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/margin_horizontal_small"
                    android:layout_marginTop="@dimen/margin_vertical_default"
                    android:layout_marginEnd="@dimen/margin_horizontal_small"
                    android:layout_marginBottom="@dimen/margin_vertical_default"
                    android:background="@color/listBackground"
                    android:orientation="horizontal"
                    android:scrollbars="horizontal"
                    app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
                    tools:itemCount="1"
                    tools:listitem="@layout/item_action_card" />

            </LinearLayout>

        </androidx.cardview.widget.CardView>

        <include layout="@layout/include_view_separator" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>
